# Engine

./: CMakeLists.txt  LICENSE
engine/: CMakeLists.txt
engine/include/engine/: appinfo.h  core.h  engine.h  test.h
engine/include/engine/core/: appinfo.h  logging.h  system.h  types.h
engine/include/engine/gfx/: system.h  window.h
engine/src/: core.cpp  test.cpp
engine/src/core/: system.cpp
engine/src/gfx/: system.cpp  window.cpp
example/: CMakeLists.txt  main.cpp
